# cmake_template

./: CMakeLists.txt  build.sh  main.cpp  test.txt
core/: CMakeLists.txt
core/include/: iinterface.h
core/src/: CMakeLists.txt  core.cpp  core.h  core_details.cpp  core_details.h  iinterface.h
core/test/: CMakeLists.txt  mockInterface.h  test_core.cpp
module1/src/: CMakeLists.txt  module1.cpp  module1.h
module1/test/: CMakeLists.txt  test1.cpp  test2.cpp
